--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,4 +31,4 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
-        run: echo ${{ github.ref }}
+        run: echo ${{ github.ref }} && echo ${{ github.event.pull_request.head.ref }}
